improve readabilty of notebooks

--- a/notebooks/feature-selection.ipynb
+++ b/notebooks/feature-selection.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-03-27 17:42:03.178\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mdarwin.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mPROJ_ROOT path is: /Users/eduardoduarte/Projects/refactor-darwin/darwin\u001b[0m\n"
+      "\u001b[32m2025-03-28 10:20:31.644\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mdarwin.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mPROJ_ROOT path is: /Users/eduardoduarte/Projects/refactor-darwin/darwin\u001b[0m\n"
      ]
     }
    ],
@@ -89,24 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['total_time23', 'total_time15', 'air_time15', 'air_time23', 'air_time17', 'total_time6', 'total_time17', 'paper_time17', 'total_time3', 'total_time8']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(select_feature_imp(df, FEATURE_NUM))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,24 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['gmrt_in_air7', 'mean_gmrt7', 'disp_index23', 'mean_speed_in_air7', 'paper_time9', 'air_time16', 'mean_gmrt17', 'total_time9', 'disp_index22', 'total_time3']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(select_anova(df, FEATURE_NUM))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,24 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['pressure_var5', 'disp_index8', 'mean_jerk_on_paper8', 'paper_time12', 'air_time15', 'total_time15', 'gmrt_in_air17', 'max_y_extension19', 'disp_index21', 'air_time24']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(select_rfe(df, FEATURE_NUM))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +184,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['total_time23', 'total_time15', 'air_time15', 'air_time23',\n",
+      "       'air_time17', 'total_time6', 'total_time17', 'paper_time17',\n",
+      "       'total_time3', 'total_time8'],\n",
+      "      dtype='object')\n",
+      "Index(['gmrt_in_air7', 'mean_gmrt7', 'disp_index23', 'mean_speed_in_air7',\n",
+      "       'paper_time9', 'air_time16', 'mean_gmrt17', 'total_time9',\n",
+      "       'disp_index22', 'total_time3'],\n",
+      "      dtype='object')\n",
+      "Index(['pressure_var5', 'disp_index8', 'mean_jerk_on_paper8', 'paper_time12',\n",
+      "       'air_time15', 'total_time15', 'gmrt_in_air17', 'max_y_extension19',\n",
+      "       'disp_index21', 'air_time24'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feature_imp.columns)\n",
+    "print(anova.columns)\n",
+    "print(rfe.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
